@@ -97,17 +97,25 @@
 #define TRACE_EXCLUDE_AUTOMATIC_FUNCTIONS ((xmlChar*) "exclude-automatic-functions")
 #define TRACE_USERFUNCTION              ((xmlChar*) "user-functions")
 #define TRACE_SAMPLING                  ((xmlChar*) "sampling")
+#define TRACE_FINALIZE_ON_SIGNAL        ((xmlChar*) "finalize-on-signal")
+#define TRACE_FINALIZE_ON_SIGNAL_USR1   ((xmlChar*) "SIGUSR1")
+#define TRACE_FINALIZE_ON_SIGNAL_USR2   ((xmlChar*) "SIGUSR2")
+#define TRACE_FINALIZE_ON_SIGNAL_INT    ((xmlChar*) "SIGINT")
+#define TRACE_FINALIZE_ON_SIGNAL_QUIT   ((xmlChar*) "SIGQUIT")
+#define TRACE_FINALIZE_ON_SIGNAL_TERM   ((xmlChar*) "SIGTERM")
+#define TRACE_FINALIZE_ON_SIGNAL_XCPU   ((xmlChar*) "SIGXCPU")
+#define TRACE_FINALIZE_ON_SIGNAL_FPE    ((xmlChar*) "SIGFPE")
+#define TRACE_FINALIZE_ON_SIGNAL_SEGV   ((xmlChar*) "SIGSEGV")
+#define TRACE_FINALIZE_ON_SIGNAL_ABRT   ((xmlChar*) "SIGABRT")
 
 #define TRACE_CONTROL                   ((xmlChar*) "trace-control")
 #define TRACE_CONTROL_FILE              ((xmlChar*) "file")
 #define TRACE_CONTROL_GLOPS             ((xmlChar*) "global-ops")
 #define TRACE_REMOTE_CONTROL            ((xmlChar*) "remote-control")
 #define REMOTE_CONTROL_METHOD_MRNET     ((xmlChar*) "mrnet")
-#define REMOTE_CONTROL_METHOD_SIGNAL    ((xmlChar*) "signal")
 #define RC_MRNET_TARGET                 ((xmlChar*) "target")
 #define RC_MRNET_ANALYSIS               ((xmlChar*) "analysis")
 #define RC_MRNET_START_AFTER            ((xmlChar*) "start-after")
-#define RC_SIGNAL_WHICH                 ((xmlChar*) "which")
 #define REMOTE_CONTROL_METHOD_ONLINE    ((xmlChar*) "online")
 #define RC_ONLINE_TYPE                  ((xmlChar*) "analysis")
 #define RC_ONLINE_FREQ                  ((xmlChar*) "frequency")
